tests/reference/asr-continue_compilation_ff_1-c2d5950.stderr
syntax error: Newline is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:93:14
   |
93 |       I == 10
   |              ^ 

syntax error: Token '.5' (of type 'real') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:94:14
   |
94 |       J = 20..5
   |              ^^ 

syntax error: Token 'i' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:95:32
   |
95 |       PRINT *, "Value of I is" I
   |                                ^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
  --> tests/errors/continue_compilation_ff_1.f:96:7
   |
96 |       CHARACTER*10 STR = 'Hello  '
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Token 'format' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:97:18
   |
97 |       WRITE(*,10 FORMAT(A))
   |                  ^^^^^^ 

syntax error: Token '*' is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:98:16
   |
98 |       A = B +  * C
   |                ^ 

syntax error: Token '.5' (of type 'real') is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:101:20
    |
101 |       REAL X Y Z 10.5
    |                    ^^ 

syntax error: Newline is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:102:27
    |
102 |       COMPLEX C = (1.0,2.0
    |                           ^ 

syntax error: Token '=' is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:103:11
    |
103 |       I === 10
    |           ^ 

syntax error: Token 'e' (of type 'identifier') is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:104:14
    |
104 |       J = .20E
    |              ^ 

syntax error: Token '.45' (of type 'real') is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:105:22
    |
105 |       REAL*8 A = 1.23.45
    |                      ^^^ 

syntax error: Token 'thenprint' (of type 'identifier') is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:119:20
    |
119 |       IF I .EQ. 10 THEN PRINT *, "Ten"
    |                    ^^^^^^^^^^ 

syntax error: Newline is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:120:23
    |
120 |       CALL FUNC( 5, 6,
    |                       ^ 

warning: non-standard Fortran 77-style initialization (extension)
   --> tests/errors/continue_compilation_ff_1.f:106:17
    |
106 |       INTEGER*4 VAR/5/
    |                 ^^^^^^ Use modern syntax instead: integer :: var = 5

warning: non-standard Fortran 77-style initialization (extension)
   --> tests/errors/continue_compilation_ff_1.f:107:15
    |
107 |       INTEGER VAR2/6/
    |               ^^^^^^^ Use modern syntax instead: integer :: var2 = 6

semantic error: Symbol is already declared in the same scope
   --> tests/errors/continue_compilation_ff_1.f:108:17
    |
108 |       INTEGER*4 VAR/5/
    |                 ^^^^^^ redeclaration
    |
106 |       INTEGER*4 VAR/5/
    |                 ~~~~~~ original declaration

warning: This equivalence statement is not implemented yet, for now we will ignore it
   --> tests/errors/continue_compilation_ff_1.f:109:7
    |
109 |       EQUIVALENCE (X Y)
    |       ^^^^^^^^^^^^^^^^^ ignored for now

semantic error: Variable 'integerklm' is not declared
  --> tests/errors/continue_compilation_ff_1.f:99:7
   |
99 |       INTEGER K L M = 5
   |       ^^^^^^^^^^^^^ 'integerklm' is undeclared

semantic error: Variable 'n5' is not declared
   --> tests/errors/continue_compilation_ff_1.f:100:15
    |
100 |       READ *, N 5
    |               ^^^ 'n5' is undeclared
